--- a/index.html
+++ b/index.html
@@ -58,11 +58,19 @@
     <link href="static/features.css" rel="stylesheet"/>
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WNFFPWD');</script>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WNFFPWD');</script>
     <!-- End Google Tag Manager -->
 </head>
 <body>
@@ -330,19 +338,24 @@
 <!-- Footer -->
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-muted">&copy; 2021 Element swimming | <a class="light-gray no-decoration"
-                                                                              href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael Sláma</a></p>
+        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2021 Element swimming | <a class="light-gray no-decoration"
+                                                                                     href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael
+            Sláma</a></p>
 
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <a href="/" class="col-12 col-md-4 d-flex align-items-center justify-content-center my-3 mb-md-0 me-md-auto link-dark text-decoration-none">
             <img src="static/images/basic_logo.webp" title="Element Swimming" alt="Logo Element Swimming - záhlaví" class="bi me-2" width="54" height="36"/>
         </a>
 
-        <ul class="nav col-md-4 footer-nav">
+        <ul class="col-12 nav col-md-4 footer-nav">
             <li class="nav-item"><a href="#home" class="nav-link px-2 text-muted">Domů</a></li>
             <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">O nás</a></li>
             <li class="nav-item"><a href="#services" class="nav-link px-2 text-muted">Služby</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Kontakt</a></li>
         </ul>
+        <div class="col-12 text-center py-3 cookies-consent">
+            Tento web používa soubory cookies. Prohlížením webu vyjadřujete souhlas s jejich používaním.
+            <a class="text-color-es" id="cookie-button" type="button" data-bs-toggle="modal" data-bs-target="#CookiesModal">Více informací</a>.
+        </div>
     </footer>
 </div>
 
@@ -687,15 +700,33 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="PfModal" tabindex="-1" aria-labelledby="PfModal" aria-hidden="true">
+<!-- Cookies Modal -->
+<div class="modal fade" id="CookiesModal" tabindex="-1" aria-labelledby="CookiesModal" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content px-2">
             <div class="modal-header text-center">
-                <h2 class="modal-title text-muted wh-100">PF - 2022</h2>
+                <h2 class="modal-title text-muted wh-100">Zásady používání souborů cookies</h2>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body p-0 m-0">
-                <img src="static/images/pf_2022.webp" alt="PF 2022" title="PF 2022">
+            <div class="modal-body-cookies-consent">
+                Tyto zásady používání souborů cookies a podobných technologií se vztahují na webovou stránku www.elementswimming.cz.
+                <p class="cookie-section fw-bold">Co jsou soubory cookies?</p>
+                Soubory cookies jsou malé textové soubory, které při návštěvě webové stránky ukládá prohlížeč ve vašem počítači nebo zařízení. Soubory cookies
+                umožňují webové stránce rozpoznat zařízení a zapamatovat si určité informace o návštěvních pořadech během připojení. Soubory cookies si pamatují
+                typ používaného prohlížeče nebo nastavení, například jazyk, která zůstávají výchozím nastavením při opakované návštěvě webové stránky.
+                Údaje, které soubory cookies sbírají, jsou <span class="fw-bold">agregované</span> a <span class="fw-bold">anonymní</span>.
+                <p class="cookie-section fw-bold">Na co používáme soubory cookies?</p>
+                <span class="fw-bold">Výkonové cookies </span>umožňují analyzovat, jakým způsobem pracujete s našimi stránkami. Ty lze využít ke
+                zlepšení a zjednodušení použitelnosti našich webových stránek. Údaje, které soubory cookies sbírají, vás <span class="fw-bold">osobně neidentifikují.</span><br><br>
+                Soubory cookies, které používáme, nepoškozují váš počítač a nelze je použít ke shromažďování vašich osobních údajů.<br><br>
+                V rámci našich webových stránek používáme jako dodavatele třetí stranu - službu Google Analytics nebo odkaz na tuto
+                službu. Tyto odkazy (jakýkoli jiný obsah od dodavatelů ze třetí strany) mohou obsahovat soubory cookies třetí strany, a proto byste si informace
+                o používání takových souborů cookies měli přečíst v zásadách informace o používaných souborech cookies příslušné třetí strany.
+                <p class="cookie-section fw-bold">Jak mohu soubory cookies kontrolovat nebo vymazat?</p>
+                Většina prohlížečů přijímá soubory cookies automaticky. Pokud soubory cookies nechcete používat, budete je muset aktivně odstranit nebo
+                zablokovat. Pokud odmítnete používání souboru cookies, budete stále schopni navštívit naše webové stránky, ale některé funkce nemusí fungovat
+                správně. Pokud si tak přejete učinit, můžete zvolit možnost odmítnout či blokovat soubory cookies změnou nastavení vašeho internetového
+                prohlížeče. Pro více informací využijte nápovědu vašeho internetového prohlížeče.
             </div>
         </div>
     </div>
