--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
             <img src="static/images/csps.webp" title="Český Svaz Plaveckých Sportů"
                  alt="Český Svaz Plaveckých Sportů - Logo" class="bi me-2" width="200"/>
         </a>
+        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://fitnessclinic.cz">
+            <img src="static/images/fitness_clinic.webp" title="Fitness Clinic"
+                 alt="Fitness Clinic - Logo" class="bi me-2" width="200"/>
+        </a>
     </div>
 </div>
 
