Add non-swimmer section

--- a/index.html
+++ b/index.html
@@ -377,6 +377,21 @@
                         <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lekce pro (ne)plavce</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">999 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>Plavecká lekce zejména pro ty, kteří sami sebe považuji za neplavce.</small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
                                     <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hod</p>
                                 </div>
@@ -450,6 +465,21 @@
             </div>
             <div class="modal-body">
                 <div class="row row-cols-1 align-items-stretch pb-3">
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lekce pro (ne)plavce</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>Plavecká lekce zejména pro ty, kteří sami sebe považuji za neplavce.</small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col">
                         <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
@@ -531,6 +561,21 @@
                         <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lekce pro (ne)plavce</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>Plavecká lekce zejména pro ty, kteří sami sebe považuji za neplavce.</small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
                                     <p class="mb-3 display-cust lh-1 fw-bold">599 Kč/hod</p>
                                 </div>
@@ -604,6 +649,21 @@
             </div>
             <div class="modal-body">
                 <div class="row row-cols-1 align-items-stretch pb-3">
+                    <div class="col">
+                        <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
+                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
+                                <div class="d-flex justify-content-between flex-wrap align-items-center">
+                                    <p class="mb-3 display-6 lh-1 fw-bold pr-2">Lekce pro (ne)plavce</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hod</p>
+                                </div>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="d-flex align-items-center me-3">
+                                        <small>Plavecká lekce zejména pro ty, kteří sami sebe považuji za neplavce.</small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col">
                         <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
