--- a/index.html
+++ b/index.html
@@ -382,7 +382,11 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Lekce plavání, kdy se trenér věnuje pouze Vám.</small>
+                                        <small>
+                                            Nebaví tě “kroužit odezdi ke zdi”? Nabízíme Ti smysluplný trénink tak,
+                                            že jsi pod drobnohledem profesionála a víš, že jsi na tréninku, který je
+                                            nastaven tak, aby vedl ke zlepšení tvých cílů.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -397,7 +401,11 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Lekce plavání, kdy se trenér věnuje nanejvýš 2 osobám.</small>
+                                        <small>
+                                            Nerad chodíš sportovat sám? Raději jdeš s přítelkyní, kolegou z práce,
+                                            bráchou, ségrou a nebo babičkou? Tak v tom případě neváhej, vem toho, s kým
+                                            normálně chodíš a plav.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -412,7 +420,10 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Plavecké lekce pro 3 - 4 osoby.</small>
+                                        <small>
+                                            Lekce, kdy se sejdou ti, kteří výkonnostně zapadají k sobě a
+                                            nebo právě ti, kteří chodí plavat jako parta.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -427,7 +438,10 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Plavecká lekce zejména pro ty, kteří sami sebe považuji za neplavce.</small>
+                                        <small>
+                                            Pokud se máš v plánu naučit plavat v pozdějším věku a nebo chceš někoho,
+                                            kdo se bude tvým dětem věnovat víc, než trenér co má v kroužku 20 dětí, tak napiš.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -442,9 +456,13 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3 text-justify long-text">
-                                        <small>Videoanalýza plaveckého způsobu s následnou korekcí techniky. Při využití této služby Vám bude poskytnut video
-                                            záznam vašeho
-                                            plaveckého způsobu, který následně rozebereme a společně se pokusíme případné chyby či nedostatky odbourat.</small>
+                                        <small>
+                                            Techniku videí z Youtube máš zmáklou ale ve vodě to stále není ono?
+                                            Myslíš si, že pohyby ve vodě opakuješ jak ve videu ale očekávaný progress nikde?
+                                            Tak tady pro tebe něco mám -  Videoanalýza plaveckého způsobu s následnou korekcí techniky.
+                                            Při využití této služby ti poskytnu video záznam tvého plavání,
+                                            který společně projdeme jak teoreticky, tak prakticky.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -474,7 +492,11 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Lekce plavání, kdy se trenér věnuje pouze Vám.</small>
+                                        <small>
+                                            Nebaví tě “kroužit odezdi ke zdi”? Nabízíme Ti smysluplný trénink tak,
+                                            že jsi pod drobnohledem profesionála a víš, že jsi na tréninku, který je
+                                            nastaven tak, aby vedl ke zlepšení tvých cílů.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -489,7 +511,11 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Lekce plavání, kdy se trenér věnuje nanejvýš 2 osobám.</small>
+                                        <small>
+                                            Nerad chodíš sportovat sám? Raději jdeš s přítelkyní, kolegou z práce,
+                                            bráchou, ségrou a nebo babičkou? Tak v tom případě neváhej, vem toho, s kým
+                                            normálně chodíš a plav.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -504,7 +530,10 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Plavecké lekce pro 3 - 4 osoby.</small>
+                                        <small>
+                                            Lekce, kdy se sejdou ti, kteří výkonnostně zapadají k sobě a
+                                            nebo právě ti, kteří chodí plavat jako parta.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -519,7 +548,10 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Plavecká lekce zejména pro ty, kteří sami sebe považuji za neplavce.</small>
+                                        <small>
+                                            Pokud se máš v plánu naučit plavat v pozdějším věku a nebo chceš někoho,
+                                            kdo se bude tvým dětem věnovat víc, než trenér co má v kroužku 20 dětí, tak napiš.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -534,9 +566,13 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3 text-justify long-text">
-                                        <small>Videoanalýza plaveckého způsobu s následnou korekcí techniky. Při využití této služby Vám bude poskytnut video
-                                            záznam vašeho
-                                            plaveckého způsobu, který následně rozebereme a společně se pokusíme případné chyby či nedostatky odbourat.</small>
+                                        <small>
+                                            Techniku videí z Youtube máš zmáklou ale ve vodě to stále není ono?
+                                            Myslíš si, že pohyby ve vodě opakuješ jak ve videu ale očekávaný progress nikde?
+                                            Tak tady pro tebe něco mám -  Videoanalýza plaveckého způsobu s následnou korekcí techniky.
+                                            Při využití této služby ti poskytnu video záznam tvého plavání,
+                                            který společně projdeme jak teoreticky, tak prakticky.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -566,7 +602,11 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Lekce plavání, kdy se trenér věnuje pouze Vám.</small>
+                                        <small>
+                                            Nebaví tě “kroužit odezdi ke zdi”? Nabízíme Ti smysluplný trénink tak,
+                                            že jsi pod drobnohledem profesionála a víš, že jsi na tréninku, který je
+                                            nastaven tak, aby vedl ke zlepšení tvých cílů.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -581,7 +621,11 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Lekce plavání, kdy se trenér věnuje nanejvýš 2 osobám.</small>
+                                        <small>
+                                            Nerad chodíš sportovat sám? Raději jdeš s přítelkyní, kolegou z práce,
+                                            bráchou, ségrou a nebo babičkou? Tak v tom případě neváhej, vem toho, s kým
+                                            normálně chodíš a plav.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -596,7 +640,10 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Plavecké lekce pro 3 - 4 osoby.</small>
+                                        <small>
+                                            Lekce, kdy se sejdou ti, kteří výkonnostně zapadají k sobě a
+                                            nebo právě ti, kteří chodí plavat jako parta.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -611,7 +658,10 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Plavecká lekce zejména pro ty, kteří sami sebe považuji za neplavce.</small>
+                                        <small>
+                                            Pokud se máš v plánu naučit plavat v pozdějším věku a nebo chceš někoho,
+                                            kdo se bude tvým dětem věnovat víc, než trenér co má v kroužku 20 dětí, tak napiš.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -626,9 +676,13 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3 text-justify long-text">
-                                        <small>Videoanalýza plaveckého způsobu s následnou korekcí techniky. Při využití této služby Vám bude poskytnut video
-                                            záznam vašeho
-                                            plaveckého způsobu, který následně rozebereme a společně se pokusíme případné chyby či nedostatky odbourat.</small>
+                                        <small>
+                                            Techniku videí z Youtube máš zmáklou ale ve vodě to stále není ono?
+                                            Myslíš si, že pohyby ve vodě opakuješ jak ve videu ale očekávaný progress nikde?
+                                            Tak tady pro tebe něco mám -  Videoanalýza plaveckého způsobu s následnou korekcí techniky.
+                                            Při využití této služby ti poskytnu video záznam tvého plavání,
+                                            který společně projdeme jak teoreticky, tak prakticky.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -658,7 +712,11 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Lekce plavání, kdy se trenér věnuje pouze Vám.</small>
+                                        <small>
+                                            Nebaví tě “kroužit odezdi ke zdi”? Nabízíme Ti smysluplný trénink tak,
+                                            že jsi pod drobnohledem profesionála a víš, že jsi na tréninku, který je
+                                            nastaven tak, aby vedl ke zlepšení tvých cílů.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -673,7 +731,11 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Lekce plavání, kdy se trenér věnuje nanejvýš 2 osobám.</small>
+                                        <small>
+                                            Nerad chodíš sportovat sám? Raději jdeš s přítelkyní, kolegou z práce,
+                                            bráchou, ségrou a nebo babičkou? Tak v tom případě neváhej, vem toho, s kým
+                                            normálně chodíš a plav.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -688,7 +750,10 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Plavecké lekce pro 3 - 4 osoby.</small>
+                                        <small>
+                                            Lekce, kdy se sejdou ti, kteří výkonnostně zapadají k sobě a
+                                            nebo právě ti, kteří chodí plavat jako parta.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -703,7 +768,10 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
-                                        <small>Plavecká lekce zejména pro ty, kteří sami sebe považuji za neplavce.</small>
+                                        <small>
+                                            Pokud se máš v plánu naučit plavat v pozdějším věku a nebo chceš někoho,
+                                            kdo se bude tvým dětem věnovat víc, než trenér co má v kroužku 20 dětí, tak napiš.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -718,9 +786,13 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3 text-justify long-text">
-                                        <small>Videoanalýza plaveckého způsobu s následnou korekcí techniky. Při využití této služby Vám bude poskytnut video
-                                            záznam vašeho
-                                            plaveckého způsobu, který následně rozebereme a společně se pokusíme případné chyby či nedostatky odbourat.</small>
+                                        <small>
+                                            Techniku videí z Youtube máš zmáklou ale ve vodě to stále není ono?
+                                            Myslíš si, že pohyby ve vodě opakuješ jak ve videu ale očekávaný progress nikde?
+                                            Tak tady pro tebe něco mám -  Videoanalýza plaveckého způsobu s následnou korekcí techniky.
+                                            Při využití této služby ti poskytnu video záznam tvého plavání,
+                                            který společně projdeme jak teoreticky, tak prakticky.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
@@ -750,10 +822,12 @@
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3 text-justify long-text">
-                                        <small>Při využití této služby budete ve spojení s trenérem,
-                                            který Vám sestaví tréninkový program na míru. Právě díky zvolené formě „online“,
-                                            Vám bude na pravidelné bázi zasílán trénink, který si můžete odtrénovat na
-                                            kterémkoliv bazénu.</small>
+                                        <small>
+                                            Cítíš se v bazénu jako ryba ve vodě? Víš co dělat a ovládáš
+                                            více plaveckých způsobů? Cítíš, že už tě nebaví plavat to, co si
+                                            pamatuješ od trenéra ze základky? Ozvi se a vymyslíme tréninky,
+                                            které tě budou bavit.
+                                        </small>
                                     </li>
                                 </ul>
                             </div>
